parsing_output/java_log.txt
HelloWorld.java:6: error: ')' expected

        System.out.println("Hello World!"adsdas);

                                         ^

HelloWorld.java:6: error: ';' expected

        System.out.println("Hello World!"adsdas);

                                               ^

2 errors